fixed so that the source would be saved too

--- a/audioCookie - Copy (3).html
+++ b/audioCookie - Copy (3).html
@@ -15,20 +15,15 @@
 <body>
 
     <h1>Audio Player</h1>
-	<h2>hooray me - I fixed gpt's problem of not saving the audio source</h2>
-    <p id="currentAudio">Currently playing: </p>
 
     <audio id="audioPlayer" controls>
         Your browser does not support the audio element.
     </audio>
 
-    <button onclick="playPreviousAudio()">Previous</button>
-    <button onclick="playNextAudio()">Next</button>
-
     <script>
         // JSON array of links to MP3 files
         var audioList = [
-         "https://www.archive.org/download/lordoftheworld_1104_librivox/lordoftheworld_00_benson.mp3" ,
+ "https://www.archive.org/download/lordoftheworld_1104_librivox/lordoftheworld_00_benson.mp3" ,
  "https://www.archive.org/download/lordoftheworld_1104_librivox/lordoftheworld_01_benson.mp3" ,
  "https://www.archive.org/download/lordoftheworld_1104_librivox/lordoftheworld_02_benson.mp3" ,
  "https://www.archive.org/download/lordoftheworld_1104_librivox/lordoftheworld_03_benson.mp3" ,
@@ -102,59 +97,14 @@
             localStorage.setItem("audioPosition", position);
         }
 
-        // Function to get the currently playing audio file from localStorage
-        function getCurrentAudio() {
-            var currentAudio = localStorage.getItem("currentAudio");
-            return currentAudio ? currentAudio : "";
-        }
-		
-		        // Function to get the currently playing audio file number from localStorage
-        function getCurrentAudioNumber() {
-            var currentAudioNumber = localStorage.getItem("currentAudioNumber");
-            return currentAudioNumber ? currentAudioNumber : 0;
-        }
-
-        // Function to set the currently playing audio file in localStorage
-        function setCurrentAudio(audio) {
-            localStorage.setItem("currentAudio", audio);
-        }
-		
-		        // Function to set the currently playing audio number in localStorage
-        function setCurrentAudioNumber(number) {
-            localStorage.setItem("currentAudioNumber", number);
-        }
-
         // Function to play the next audio in the list
         function playNextAudio() {
             var audioPlayer = document.getElementById("audioPlayer");
-            var currentAudio = document.getElementById("currentAudio");
             var currentIndex = audioList.indexOf(audioPlayer.src);
             if (currentIndex < audioList.length - 1) {
                 // Play the next audio in the list
                 audioPlayer.src = audioList[currentIndex + 1];
                 audioPlayer.play();
-                // Update the currently playing display
-                currentAudio.textContent = "Currently playing: " + audioList[currentIndex + 1];
-                // Save the currently playing audio and playback position in localStorage
-                setCurrentAudio(audioList[currentIndex + 1]);
-                setPlaybackPosition(0); // Reset the playback position for the next audio
-            }
-        }
-
-        // Function to play the previous audio in the list
-        function playPreviousAudio() {
-            var audioPlayer = document.getElementById("audioPlayer");
-            var currentAudio = document.getElementById("currentAudio");
-            var currentIndex = audioList.indexOf(audioPlayer.src);
-            if (currentIndex > 0) {
-                // Play the previous audio in the list
-                audioPlayer.src = audioList[currentIndex - 1];
-                audioPlayer.play();
-                // Update the currently playing display
-                currentAudio.textContent = "Currently playing: " + audioList[currentIndex - 1];
-                // Save the currently playing audio and playback position in localStorage
-                setCurrentAudio(audioList[currentIndex - 1]);
-                setPlaybackPosition(0); // Reset the playback position for the previous audio
             }
         }
 
@@ -163,19 +113,11 @@
             var audioPlayer = document.getElementById("audioPlayer");
             // Save the playback position in localStorage whenever the time updates
             setPlaybackPosition(audioPlayer.currentTime);
-			
-			//???added current index
-			   var currentIndex = audioList.indexOf(audioPlayer.src);
-			   setCurrentAudioNumber(currentIndex);
-			   
         }
 
-        // Set the initial playback position, audio source, and currently playing display when the page loads
+        // Set the initial playback position and audio source when the page loads
         window.onload = function() {
             var audioPlayer = document.getElementById("audioPlayer");
-            var currentAudio = document.getElementById("currentAudio");
-			var currentIndex = getCurrentAudioNumber();
-			audioPlayer.src = audioList[currentIndex];
             // Set the playback position from localStorage
             audioPlayer.currentTime = getPlaybackPosition();
 
@@ -183,11 +125,6 @@
             if (!audioPlayer.src && audioList.length > 0) {
                 audioPlayer.src = audioList[0];
                 audioPlayer.play();
-                // Update the currently playing display
-                currentAudio.textContent = "Currently playing: " + audioList[0];
-                // Save the currently playing audio and playback position in localStorage
-                setCurrentAudio(audioList[0]);
-                setPlaybackPosition(0); // Reset the playback position for the initial audio
             }
 
             // Add an event listener to handle the timeupdate event
